<resources>
    <string name="app_name">Cornell Project Showcase</string>
    <string name="title_home">My List</string>
    <string name="title_browse">Browse</string>
    <string name="title_map">Map</string>
    <string name="filter">Filter</string>
    <string name="submit">Submit</string>
    <string name="clear">Clear</string>
    <string name="no_link">Sorry. This resume book is unavailable.</string>
    <string name="no_favs">Star some projects to see them here!</string>
    <string name="hello_browse_fragment">Browse fragment</string>
    <string name="hello_map_fragment">Map Fragment</string>
    <string name="hello_home_fragment">Home fragment</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="project_details_project_info">Project Information</string>
    <string name="project_details_project_website">Project Website</string>
    <string name="project_contacts">Contacts</string>
    <string name="contact1_email">Contact1 email address</string>
    <string name="contact2_email">Contact2 email address</string>
    <string name="contact3_email">Contact3 email address</string>
    <string name="contact1_majorgradyear">Contact1 email address</string>
    <string name="contact2_majorgradyear">Contact2 email address</string>
    <string name="contact3_majorgradyear">Contact3 email address</string>
    <string name="project_details_note">Notes</string>
    <string name="project_details_editNote">Add a note for this project</string>
    <string-array name="browse_button">
        <item>All</item>
        <item>Undergrad</item>
        <item>M. Eng</item>
    </string-array>

    <string name="password_hint">Enter the code to use the app</string>
    <string name="title_activity_fullscreen">Password Protection</string>
</resources>
